[package]
name = "redbar"
version = "0.0.1"
edition = "2018"
license = "GPL-3.0"
description = "a status bar to accompany redwm"
readme = "README.md"
repository = "https://github.com/delta1024/redbar"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
